--- a/Ibvc.sln/Ibvc.UI/wwwroot/index.html
+++ b/Ibvc.sln/Ibvc.UI/wwwroot/index.html
@@ -7,6 +7,7 @@
     <base href="/"/>
 
     <link rel="stylesheet" href="css/themes.css"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Favicon e PWA -->
     <link rel="icon" type="image/png" href="favicon.png"/>
