--- a/Ibvc.sln/Ibvc.UI/wwwroot/index.html
+++ b/Ibvc.sln/Ibvc.UI/wwwroot/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Igreja Batista Vivendo Para Cristo</title>
-    <base href="/"/>
-
+    <title>IBVC</title>
+    <base href="/Ibvc/"/>
     <link rel="stylesheet" href="css/themes.css"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-    <!-- Favicon e PWA -->
     <link rel="icon" type="image/png" href="favicon.png"/>
     <link href="manifest.webmanifest" rel="manifest"/>
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png"/>
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
 <div id="app"></div>
 <script src="_framework/blazor.webassembly.js"></script>
-<script>navigator.serviceWorker.register('service-worker.js');</script>
+<script>
+    if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('./service-worker.js');
+    }
+</script>
 </body>
+
 </html>
