Tentando resolver navigation errado

--- a/Ibvc.sln/Ibvc.UI/wwwroot/index.html
+++ b/Ibvc.sln/Ibvc.UI/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>IBVC</title>
+    <title>IBE</title>
     <script src="redirect.js"></script>
     <base href="/Ibvc/"/>
     <link rel="stylesheet" href="css/themes.css"/>
