--- a/Ibvc.sln/Ibvc.UI/wwwroot/index.html
+++ b/Ibvc.sln/Ibvc.UI/wwwroot/index.html
@@ -18,11 +18,11 @@
 <body>
 <div id="app"></div>
 <script src="_framework/blazor.webassembly.js"></script>
-<script>
-    if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('./service-worker.js');
-    }
-</script>
+<!--<script>-->
+<!--    if ('serviceWorker' in navigator) {-->
+<!--        navigator.serviceWorker.register('./service-worker.js');-->
+<!--    }-->
+<!--</script>-->
 </body>
 
 </html>
